# redtime-rs

./: .gitignore  Cargo.toml  Justfile  README.md  redtime.toml  time_entries.csv
misc/: redmine-test-db.db
src/: config.rs  errors.rs  helper.rs  info.rs  main.rs
